security | Refresh Token, Change Access-token expires 1 hour and add role for get Profile.